Fix horizontall overflow

--- a/style/style.css
+++ b/style/style.css
@@ -374,6 +374,7 @@ footer {
     section.buscamos .right {
         width: 100%;
         padding: 120px 8vw;
+        box-sizing: border-box;
     }
 
     section.buscamos .left h2,
